@@ -32,6 +32,25 @@ argonms.login.data.type=KVJ
 # Recommended: false
 argonms.login.data.preload=false
 
+# Worlds that have flags and/or event messages
+argonms.login.decoratedWorlds=0, 1, 2
+
+# Flag in channel selection.
+# 0 = Nothing; 1 = Event; 2 = New; 3 = Hot
+argonms.login.world.0.flag=1
+argonms.login.world.1.flag=2
+argonms.login.world.2.flag=3
+
+# Events message in channel selection.
+argonms.login.world.0.message=Low rates, GMS-like
+argonms.login.world.1.message=High rates, extras
+
+# Chat bubble-like messages that appear on the world select screen
+# List messages in the format (position1 x, position1 y):message1, (position2 x, position2 y):message2 ...
+# (0, 0) has the chat bubble's tail on the icon of the second to leftmost world.
+# Coordinates may not be negative. Messages may not have commas.
+argonms.login.balloons=
+
 # Center server's IP address
 argonms.login.center.ip=127.0.0.1
 
